--- a/devfolio-1.0.0/devfolio-1.0.0/index.html
+++ b/devfolio-1.0.0/devfolio-1.0.0/index.html
@@ -16,6 +16,10 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+
+
+<link href="https://fonts.googleapis.com/css2?family=Bangers&family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Comic+Relief:wght@400;700&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -83,11 +87,11 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/hero-img.jpg" alt="" data-aos="fade-in">
+      <img src="assets/img/background.png" alt="" data-aos="fade-in">
 
       <div class="container d-flex flex-column align-items-center justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
         <h2>I am Rahdee Salie</h2>
-        <p><span class="typed" data-typed-items="Frontend Developer, UX / UI Designer, Freelance Graphic Designer"></span></p>
+        <p><span class="typed" data-typed-items=" a Frontend Developer, UX / UI Designer, Freelance Graphic Designer"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
@@ -105,7 +109,7 @@
                 <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
               </div>
               <div class="col-lg-7 about-info">
-                <p><strong>Name: </strong> <span>Morgan Freeman</span></p>
+                <p><strong>Name: </strong> <span>Rahdee Salie</span></p>
                 <p><strong>Profile: </strong> <span>full stack developer</span></p>
                 <p><strong>Email: </strong> <span>contact@example.com</span></p>
                 <p><strong>Phone: </strong> <span>(617) 557-0089</span></p>
