--- a/devfolio-1.0.0/devfolio-1.0.0/index.html
+++ b/devfolio-1.0.0/devfolio-1.0.0/index.html
@@ -16,6 +16,7 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Share+Tech&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 
 
@@ -91,7 +92,7 @@
 
       <div class="container d-flex flex-column align-items-center justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
         <h2>I am Rahdee Salie</h2>
-        <p><span class="typed" data-typed-items=" a Frontend Developer, UX / UI Designer, Freelance Graphic Designer"></span></p>
+        <p><span class="typed" data-typed-items=" a Frontend Developer, UX / UI  Designer, UX / UI Developer, and lastly a Freelance Graphic Designer"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
@@ -110,9 +111,9 @@
               </div>
               <div class="col-lg-7 about-info">
                 <p><strong>Name: </strong> <span>Rahdee Salie</span></p>
-                <p><strong>Profile: </strong> <span>full stack developer</span></p>
-                <p><strong>Email: </strong> <span>contact@example.com</span></p>
-                <p><strong>Phone: </strong> <span>(617) 557-0089</span></p>
+                <p><strong>Profile: </strong> <span> Junior C# Developer</span></p>
+                <p><strong>Email: </strong> <span>rahdee99@gmail.com</span></p>
+                <p><strong>Phone: </strong> <span>069 731 2735</span></p>
               </div>
             </div>
 
@@ -120,31 +121,138 @@
 
               <h5>Skills</h5>
 
+            <h5 class="frontend-skills-title">Frontend Skills</h5>
+
+            <div class="progress">
+  <span class="skill"><span>HTML</span> <i class="val">90%</i></span>
+  <div class="progress-bar-wrap">
+    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+  </div>
+</div><!-- End Skills Item -->
+
+<div class="progress">
+  <span class="skill"><span>CSS</span> <i class="val">85%</i></span>
+  <div class="progress-bar-wrap">
+    <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+  </div>
+</div><!-- End Skills Item -->
+
+<div class="progress">
+  <span class="skill"><span>JavaScript</span> <i class="val">70%</i></span>
+  <div class="progress-bar-wrap">
+    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+  </div>
+</div><!-- End Skills Item -->
+
+              <h5 class="Backend-skills-title">Backend Skills</h5>
+
               <div class="progress">
-                <span class="skill"><span>HTML</span> <i class="val">100%</i></span>
+                <span class="skill"><span>C#</span> <i class="val">65%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div><!-- End Skills Item -->
 
-              <div class="progress">
-                <span class="skill"><span>CSS</span> <i class="val">90%</i></span>
+                <div class="progress">
+                <span class="skill"><span>Python</span> <i class="val">60%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div><!-- End Skills Item -->
 
+              <h5 class="Frameworks-skills-title">Framework Skills</h5>
+
               <div class="progress">
-                <span class="skill"><span>JavaScript</span> <i class="val">75%</i></span>
+                <span class="skill"><span>Blazor</span> <i class="val">60%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div><!-- End Skills Item -->
+
+                 <div class="progress">
+                <span class="skill"><span>MVC (ASP.NET)</span> <i class="val">65%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div><!-- End Skills Item -->
+
+              <h5 class="Databases-skills-title">Databases</h5>
+
+              <div class="progress">
+                <span class="skill"><span>SQL</span> <i class="val">65%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div><!-- End Skills Item -->
+
+               <h5 class="CloudStorage-skills-title">Cloud Storage</h5>
+
+              <div class="progress">
+                <span class="skill"><span>Azure Blob Storage</span> <i class="val">65%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div><!-- End Skills Item -->
+
+      <h5 class="RPA-skills-title">Automation & RPA Skills</h5>
+
+            <div class="progress">
+  <span class="skill"><span>UiPath</span> <i class="val">75%</i></span>
+  <div class="progress-bar-wrap">
+    <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+  </div>
+</div><!-- End Skills Item -->
+
+<div class="progress">
+  <span class="skill"><span>Sharepoint</span> <i class="val">80%</i></span>
+  <div class="progress-bar-wrap">
+    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+  </div>
+</div><!-- End Skills Item -->
+
+<div class="progress">
+  <span class="skill"><span>PowerAutomate</span> <i class="val">75%</i></span>
+  <div class="progress-bar-wrap">
+    <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+  </div>
+</div><!-- End Skills Item -->
+
+<div class="progress">
+  <span class="skill"><span>PowerApps</span> <i class="val">80%</i></span>
+  <div class="progress-bar-wrap">
+    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+  </div>
+</div><!-- End Skills Item -->
+
+<h5 class="UXUi-skills-title">Prototyping</h5>
+
+              <div class="progress">
+                <span class="skill"><span>Adobe XD</span> <i class="val">80%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div><!-- End Skills Item -->
+
+                            <div class="progress">
+                <span class="skill"><span>Figma</span> <i class="val">75%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div><!-- End Skills Item -->
 
+<h5 class="Design-skills-title">Graphic Design Skills</h5>
+
               <div class="progress">
-                <span class="skill"><span>Photoshop</span> <i class="val">55%</i></span>
+                <span class="skill"><span>Adobe Illustrator</span> <i class="val">90%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div><!-- End Skills Item -->
+
+                  <div class="progress">
+                <span class="skill"><span>Miro</span> <i class="val">80%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div><!-- End Skills Item -->
 
@@ -153,23 +261,40 @@
 
           <div class="col-md-6">
             <div class="about-me">
-              <h4>About me</h4>
-              <p>
-                Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id
-                imperdiet et, porttitor
-                at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla
-                porttitor accumsan tincidunt.
-              </p>
-              <p>
-                Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
-                porttitor volutpat. Vestibulum
-                ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.
-              </p>
-              <p>
-                Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
-                Nulla porttitor accumsan
-                tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
-              </p>
+              <h4>Who Am I ?</h4>
+                      <p>
+                        My name is Rahdee Salie, and I am a passionate and hardworking Frontend Developer, UX / UI Designer and Graphic Designer. I am highly motivated and <br> I thrive on taking up challenges, as they serve as a valuable learning experience for me.
+                    </p>
+
+                    <p>
+                        I bring passion and commitment to everything I do, with a continuous drive to deliver high-quality results. For me, each new project is more than just a task, it is a chance to grow and improve, in order to make an impact. I believe that every opportunity is a chance to learn and grow.
+                    </p>
+
+                    <p>
+                        I obtained my N6 Higher Certificate in 2021 from the College of Cape Town, where I studied Art & Design , specialising in Graphic Design. In 2022 I enrolled at the Samsung Future Innovation Lab at the University of the Western Cape ,  whereby I obtained a Certificate  of Competency in Introduction to Multiplatform Social Development
+                        and a Certificate of Competency for Digital Social Innovation for Impact.
+
+                    </p>
+
+                    <p>
+                        While attending the Samsung Future Innovation Lab , my team and I developed KidReady, an Early Childhood Development mobile app. The app connects parents and educators, and offers  caregivers essential information to support children's development.
+                    </p>
+
+                    <p>
+                        I possess strong skills in HTML, CSS, JavaScript, Python, .NET, C# . These languages enable me to develop dynamic user interface. In addition to coding proficiency, I am well-versed in utilising various tools and technologies such as Adobe Illustrator, Adobe XD, Photoshop, Lightroom, and InDesign, Miro and Figma. These tools empower me to create visually captivating designs that effectively communicate the desired message and enhance user experiences.
+                    </p>
+
+                    <p>
+                     My Robotic Process Automation (RPA) skills include UiPath and Automation Anywhere. Additionally I have  hands on experience with cloud based technologies including Microsoft Azure and Power Platform Solutions such as SharePoint, Power Automate, and PowerApps.
+                    </p>
+
+                    <p>
+                        My vision is to create a world where creativity knows no boundaries and is celebrated as a powerful force for positive change. In my personal and professional life, I strive to foster an environment of innovation, collaboration, and growth.
+                    </p>
+
+                    <p>
+                        My mission is to inspire and empower others through creativity and innovation. I strive to use my skills and talents to bring positive change to the world. I aim to create meaningful and impactful experiences that touches people's lives. I am dedicated to continuous growth and learning, always seeking new opportunities to expand my horizons in order to learn and make a difference.
+                    </p>
             </div>
           </div>
         </div>
@@ -248,10 +373,14 @@
             </div><!-- Edn Resume Item -->
 
           </div>
+        <div class="d-flex align-items-center pt-5">
+          <a href="" class="btn btn-primary py-3 px-4 me-5">Download CV</a>
 
         </div>
-
+        </div>
       </div>
+
+
 
     </section><!-- /Resume Section -->
 
