--- a/devfolio-1.0.0/devfolio-1.0.0/index.html
+++ b/devfolio-1.0.0/devfolio-1.0.0/index.html
@@ -56,7 +56,6 @@
         <ul>
           <li><a href="#hero" class="active">Home<br></a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
@@ -92,7 +91,7 @@
 
       <div class="container d-flex flex-column align-items-center justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
         <h2>I am Rahdee Salie</h2>
-        <p><span class="typed" data-typed-items=" a Frontend Developer, UX / UI  Designer, UX / UI Developer, and lastly a Freelance Graphic Designer"></span></p>
+        <p><span class="typed" data-typed-items=" a Frontend Developer, UX / UI  Designer,  and a Freelance Graphic Designer"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
@@ -107,7 +106,7 @@
 
             <div class="row justify-content-between gy-4">
               <div class="col-lg-5">
-                <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+                <img src="assets/img/me.jpg" class="img-fluid" alt="">
               </div>
               <div class="col-lg-7 about-info">
                 <p><strong>Name: </strong> <span>Rahdee Salie</span></p>
@@ -119,30 +118,65 @@
 
             <div class="skills-content skills-animation">
 
-              <h5>Skills</h5>
+              <h5>Soft Skills</h5>
+<div class="skills-row skills-animation">
+  <div class="progress-circle" data-percent="85" data-label="Agile"></div>
+  <div class="progress-circle" data-percent="90" data-label="Empathy"></div>
+  <div class="progress-circle" data-percent="85" data-label="Creative"></div>
+  <div class="progress-circle" data-percent="80" data-label="Versatile"></div>
+  <div class="progress-circle" data-percent="85" data-label="Proactive"></div>
+  <div class="progress-circle" data-percent="90" data-label="Collaborative"></div>
+</div>
 
-            <h5 class="frontend-skills-title">Frontend Skills</h5>
 
-            <div class="progress">
-  <span class="skill"><span>HTML</span> <i class="val">90%</i></span>
-  <div class="progress-bar-wrap">
-    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-  </div>
-</div><!-- End Skills Item -->
 
-<div class="progress">
-  <span class="skill"><span>CSS</span> <i class="val">85%</i></span>
-  <div class="progress-bar-wrap">
-    <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-  </div>
-</div><!-- End Skills Item -->
+            </div>
+          </div>
 
-<div class="progress">
-  <span class="skill"><span>JavaScript</span> <i class="val">70%</i></span>
-  <div class="progress-bar-wrap">
-    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-  </div>
-</div><!-- End Skills Item -->
+          <div class="col-md-6">
+            <div class="about-me">
+              <h4>Who Am I ?</h4>
+                      <p>
+                      Hi, I am Rahdee Salie , a passionate Frontend Developer, UX/UI Designer, and Graphic Designer. I thrive on creative challenges and I am deeply committed to delivering high-quality, user-centered solutions that make a meaningful impact. I am 100% committed to everything I do in order to deliver..
+                    </p>
+
+                    <p>
+                      With a foundation in Graphic Design byy obtaining a N6 Higher Certificate from College of Cape Town in 2021, I transitioned into tech through the Samsung Future Innovation Lab at the University of the Western Cape, earning introductory certifications in Multiplatform Social Development and Digital Social Innovation. There, I co-developed KidReady, a mobile app that supports early childhood development by connecting parents and educators.
+                    </p>
+
+                    <p>
+                        I bring strong technical skills in HTML, CSS, JavaScript, Python, .NET, and C#, along with design proficiency in Adobe Creative Suite, Figma, and Miro. My expertise extends to Robotic Process Automation (RPA) with UiPath and Automation Anywhere, as well as cloud tools like Microsoft Azure, Power Automate, and PowerApps. In 2024 was honored to receive the Top Performing Intern Award in the Samsung EEIP program.
+
+                    </p>
+
+                    <p>
+                        My mission is to inspire and empower others through innovation and creativity. I am always eager to learn, grow, and collaborate on projects that drive positive change.
+                    </p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    </section><!-- /About Section -->
+
+
+    <!-- Skills Section -->
+    <section id="resume" class="resume section">
+
+      <!-- Section Title -->
+      <div class="container resume section-title" data-aos="fade-up">
+        <h2>Professional Skills</h2>
+      </div><!-- End Section Title -->
+
+
+     <h1>Frontend</h1>
+<div class="skills-row skills-animation">
+  <div class="progress-circle" data-percent="90" data-label="HTML"></div>
+  <div class="progress-circle" data-percent="85" data-label="CSS"></div>
+  <div class="progress-circle" data-percent="75" data-label="JavaScript"></div>
+</div>
+
 
               <h5 class="Backend-skills-title">Backend Skills</h5>
 
@@ -194,7 +228,7 @@
                 </div>
               </div><!-- End Skills Item -->
 
-      <h5 class="RPA-skills-title">Automation & RPA Skills</h5>
+      <h5 class="RPA-skills-title">Robotic Processing Automation</h5>
 
             <div class="progress">
   <span class="skill"><span>UiPath</span> <i class="val">75%</i></span>
@@ -202,6 +236,8 @@
     <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
   </div>
 </div><!-- End Skills Item -->
+
+<h5 class="MS-skills-title">PowerPlatform</h5>
 
 <div class="progress">
   <span class="skill"><span>Sharepoint</span> <i class="val">80%</i></span>
@@ -214,6 +250,13 @@
   <span class="skill"><span>PowerAutomate</span> <i class="val">75%</i></span>
   <div class="progress-bar-wrap">
     <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+  </div>
+</div><!-- End Skills Item -->
+
+<div class="progress">
+  <span class="skill"><span>Excel</span> <i class="val">80%</i></span>
+  <div class="progress-bar-wrap">
+    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
   </div>
 </div><!-- End Skills Item -->
 
@@ -240,10 +283,10 @@
                 </div>
               </div><!-- End Skills Item -->
 
-<h5 class="Design-skills-title">Graphic Design Skills</h5>
+<h5 class="Design-skills-title">Graphic Design</h5>
 
               <div class="progress">
-                <span class="skill"><span>Adobe Illustrator</span> <i class="val">90%</i></span>
+                <span class="skill"><span>Adobe Suite</span> <i class="val">90%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
@@ -256,60 +299,22 @@
                 </div>
               </div><!-- End Skills Item -->
 
-            </div>
-          </div>
 
-          <div class="col-md-6">
-            <div class="about-me">
-              <h4>Who Am I ?</h4>
-                      <p>
-                        My name is Rahdee Salie, and I am a passionate and hardworking Frontend Developer, UX / UI Designer and Graphic Designer. I am highly motivated and <br> I thrive on taking up challenges, as they serve as a valuable learning experience for me.
-                    </p>
 
-                    <p>
-                        I bring passion and commitment to everything I do, with a continuous drive to deliver high-quality results. For me, each new project is more than just a task, it is a chance to grow and improve, in order to make an impact. I believe that every opportunity is a chance to learn and grow.
-                    </p>
-
-                    <p>
-                        I obtained my N6 Higher Certificate in 2021 from the College of Cape Town, where I studied Art & Design , specialising in Graphic Design. In 2022 I enrolled at the Samsung Future Innovation Lab at the University of the Western Cape ,  whereby I obtained a Certificate  of Competency in Introduction to Multiplatform Social Development
-                        and a Certificate of Competency for Digital Social Innovation for Impact.
-
-                    </p>
-
-                    <p>
-                        While attending the Samsung Future Innovation Lab , my team and I developed KidReady, an Early Childhood Development mobile app. The app connects parents and educators, and offers  caregivers essential information to support children's development.
-                    </p>
-
-                    <p>
-                        I possess strong skills in HTML, CSS, JavaScript, Python, .NET, C# . These languages enable me to develop dynamic user interface. In addition to coding proficiency, I am well-versed in utilising various tools and technologies such as Adobe Illustrator, Adobe XD, Photoshop, Lightroom, and InDesign, Miro and Figma. These tools empower me to create visually captivating designs that effectively communicate the desired message and enhance user experiences.
-                    </p>
-
-                    <p>
-                     My Robotic Process Automation (RPA) skills include UiPath and Automation Anywhere. Additionally I have  hands on experience with cloud based technologies including Microsoft Azure and Power Platform Solutions such as SharePoint, Power Automate, and PowerApps.
-                    </p>
-
-                    <p>
-                        My vision is to create a world where creativity knows no boundaries and is celebrated as a powerful force for positive change. In my personal and professional life, I strive to foster an environment of innovation, collaboration, and growth.
-                    </p>
-
-                    <p>
-                        My mission is to inspire and empower others through creativity and innovation. I strive to use my skills and talents to bring positive change to the world. I aim to create meaningful and impactful experiences that touches people's lives. I am dedicated to continuous growth and learning, always seeking new opportunities to expand my horizons in order to learn and make a difference.
-                    </p>
-            </div>
-          </div>
         </div>
-
+        </div>
       </div>
 
-    </section><!-- /About Section -->
+
+
+    </section><!-- /Skills Section -->
 
     <!-- Resume Section -->
     <section id="resume" class="resume section">
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+      <div class="container resume section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -384,142 +389,7 @@
 
     </section><!-- /Resume Section -->
 
-    <!-- Services Section -->
-    <section id="services" class="services section">
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Services</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-      </div><!-- End Section Title -->
-
-      <div class="container">
-
-        <div class="row gy-4">
-
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="service-item  position-relative">
-              <div class="icon">
-                <i class="bi bi-activity"></i>
-              </div>
-              <a href="#" class="stretched-link">
-                <h3>Nesciunt Mete</h3>
-              </a>
-              <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
-            </div>
-          </div><!-- End Service Item -->
-
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="service-item position-relative">
-              <div class="icon">
-                <i class="bi bi-broadcast"></i>
-              </div>
-              <a href="#" class="stretched-link">
-                <h3>Eosle Commodi</h3>
-              </a>
-              <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
-            </div>
-          </div><!-- End Service Item -->
-
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
-            <div class="service-item position-relative">
-              <div class="icon">
-                <i class="bi bi-easel"></i>
-              </div>
-              <a href="#" class="stretched-link">
-                <h3>Ledo Markt</h3>
-              </a>
-              <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.</p>
-            </div>
-          </div><!-- End Service Item -->
-
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="service-item position-relative">
-              <div class="icon">
-                <i class="bi bi-bounding-box-circles"></i>
-              </div>
-              <a href="#" class="stretched-link">
-                <h3>Asperiores Commodit</h3>
-              </a>
-              <p>Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit provident adipisci neque.</p>
-              <a href="#" class="stretched-link"></a>
-            </div>
-          </div><!-- End Service Item -->
-
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
-            <div class="service-item position-relative">
-              <div class="icon">
-                <i class="bi bi-calendar4-week"></i>
-              </div>
-              <a href="#" class="stretched-link">
-                <h3>Velit Doloremque</h3>
-              </a>
-              <p>Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at autem alias eius labore.</p>
-              <a href="#" class="stretched-link"></a>
-            </div>
-          </div><!-- End Service Item -->
-
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
-            <div class="service-item position-relative">
-              <div class="icon">
-                <i class="bi bi-chat-square-text"></i>
-              </div>
-              <a href="#" class="stretched-link">
-                <h3>Dolori Architecto</h3>
-              </a>
-              <p>Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti recusandae ducimus enim.</p>
-              <a href="#" class="stretched-link"></a>
-            </div>
-          </div><!-- End Service Item -->
-
-        </div>
-
-      </div>
-
-    </section><!-- /Services Section -->
-
-    <!-- Stats Section -->
-    <section id="stats" class="stats section accent-background">
-
-      <img src="assets/img/stats-bg.jpg" alt="" data-aos="fade-in">
-
-      <div class="container position-relative" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="row gy-4">
-
-          <div class="col-lg-3 col-md-6">
-            <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="0" class="purecounter">232</span>
-              <p>Clients</p>
-            </div>
-          </div><!-- End Stats Item -->
-
-          <div class="col-lg-3 col-md-6">
-            <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="0" class="purecounter">521</span>
-              <p>Projects</p>
-            </div>
-          </div><!-- End Stats Item -->
-
-          <div class="col-lg-3 col-md-6">
-            <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="0" class="purecounter">1453</span>
-              <p>Hours Of Support</p>
-            </div>
-          </div><!-- End Stats Item -->
-
-          <div class="col-lg-3 col-md-6">
-            <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="0" class="purecounter">32</span>
-              <p>Awards</p>
-            </div>
-          </div><!-- End Stats Item -->
-
-        </div>
-
-      </div>
-
-    </section><!-- /Stats Section -->
 
     <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio section">
