--- a/devfolio-1.0.0/devfolio-1.0.0/index.html
+++ b/devfolio-1.0.0/devfolio-1.0.0/index.html
@@ -87,7 +87,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/background.png" alt="" data-aos="fade-in">
+      <img src="assets/img/background3.png" alt="" data-aos="fade-in">
 
       <div class="container d-flex flex-column align-items-center justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
         <h2>I am Rahdee Salie</h2>
@@ -116,13 +116,13 @@
               </div>
             </div>
 
-            <div class="skills-content skills-animation">
+            <div class="soft-skills-content skills-animation">
 
               <h5>Soft Skills</h5>
-<div class="skills-row skills-animation">
+<div class="soft-skills-row skills-animation">
   <div class="progress-circle" data-percent="85" data-label="Agile"></div>
-  <div class="progress-circle" data-percent="90" data-label="Empathy"></div>
-  <div class="progress-circle" data-percent="85" data-label="Creative"></div>
+  <div class="progress-circle" data-percent="85" data-label="Organised"></div>
+  <div class="progress-circle" data-percent="85" data-label="Innovative"></div>
   <div class="progress-circle" data-percent="80" data-label="Versatile"></div>
   <div class="progress-circle" data-percent="85" data-label="Proactive"></div>
   <div class="progress-circle" data-percent="90" data-label="Collaborative"></div>
@@ -134,7 +134,7 @@
           </div>
 
           <div class="col-md-6">
-            <div class="about-me">
+            <div class="bio-about-me">
               <h4>Who Am I ?</h4>
                       <p>
                       Hi, I am Rahdee Salie , a passionate Frontend Developer, UX/UI Designer, and Graphic Designer. I thrive on creative challenges and I am deeply committed to delivering high-quality, user-centered solutions that make a meaningful impact. I am 100% committed to everything I do in order to deliver..
@@ -162,21 +162,51 @@
 
 
     <!-- Skills Section -->
-    <section id="resume" class="resume section">
+    <section id="professional-skills" class="skills-section skills-animation">
+      <h2>Professional Skills</h2>
+  <div class="container">
 
-      <!-- Section Title -->
-      <div class="container resume section-title" data-aos="fade-up">
-        <h2>Professional Skills</h2>
-      </div><!-- End Section Title -->
+    <div class="frontend-skills-container">
 
+  <div class="skills-grid">
+    <div class="radial-progress" data-percent="85">
+      <svg viewBox="0 0 150 150">
+        <circle class="bg" cx="75" cy="75" r="65"></circle>
+        <circle class="progress" cx="75" cy="75" r="65"></circle>
+      </svg>
+      <div class="content">
+        <div class="value">85%</div>
+        <div class="label">HTML</div>
+      </div>
+    </div>
 
-     <h1>Frontend</h1>
-<div class="skills-row skills-animation">
-  <div class="progress-circle" data-percent="90" data-label="HTML"></div>
-  <div class="progress-circle" data-percent="85" data-label="CSS"></div>
-  <div class="progress-circle" data-percent="75" data-label="JavaScript"></div>
+    <div class="radial-progress" data-percent="75">
+      <svg viewBox="0 0 150 150">
+        <circle class="bg" cx="75" cy="75" r="65"></circle>
+        <circle class="progress" cx="75" cy="75" r="65"></circle>
+      </svg>
+      <div class="content">
+        <div class="value">75%</div>
+        <div class="label">CSS</div>
+      </div>
+    </div>
+
+    <div class="radial-progress" data-percent="70">
+      <svg viewBox="0 0 150 150">
+        <circle class="bg" cx="75" cy="75" r="65"></circle>
+        <circle class="progress" cx="75" cy="75" r="65"></circle>
+      </svg>
+      <div class="content">
+        <div class="value">70%</div>
+        <div class="label">Javascript</div>
+      </div>
+    </div>
+
+  </div>
 </div>
 
+
+    <div class="skills-wrapper">
 
               <h5 class="Backend-skills-title">Backend Skills</h5>
 
