working on resume

--- a/devfolio-1.0.0/devfolio-1.0.0/index.html
+++ b/devfolio-1.0.0/devfolio-1.0.0/index.html
@@ -57,7 +57,7 @@
           <li><a href="#hero" class="active">Home<br></a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Dropdown 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -73,7 +73,7 @@
               <li><a href="#">Dropdown 3</a></li>
               <li><a href="#">Dropdown 4</a></li>
             </ul>
-          </li>
+          </li> -->
           <li><a href="#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -166,10 +166,43 @@
       <h2>Professional Skills</h2>
   <div class="container">
 
+
+
     <div class="frontend-skills-container">
 
-  <div class="skills-grid">
+
+<!-- <h5 class="frontend-skills-title">Frontend Skills</h5> -->
+
+<div class="skills-grid">
     <div class="radial-progress" data-percent="85">
+      <div class="sweep-light">      <svg viewBox="0 0 150 150">
+        <circle class="bg" cx="75" cy="75" r="65"></circle>
+        <circle class="progress" cx="75" cy="75" r="65"></circle>
+      </svg>
+      <div class="content">
+        <div class="value">85%</div>
+        <div class="label">Interface Design</div></div>
+
+      </div>
+    </div>
+
+
+    <div class="skills-grid">
+
+    <div class="radial-progress" data-percent="85">
+      <div class="sweep-light"></div>
+      <svg viewBox="0 0 150 150">
+        <circle class="bg" cx="75" cy="75" r="65"></circle>
+        <circle class="progress" cx="75" cy="75" r="65"></circle>
+      </svg>
+      <div class="content">
+        <div class="value">85%</div>
+        <div class="label">User Experience</div>
+      </div>
+    </div>
+
+    <div class="radial-progress" data-percent="85">
+      <div class="sweep-light"></div>
       <svg viewBox="0 0 150 150">
         <circle class="bg" cx="75" cy="75" r="65"></circle>
         <circle class="progress" cx="75" cy="75" r="65"></circle>
@@ -180,27 +213,32 @@
       </div>
     </div>
 
-    <div class="radial-progress" data-percent="75">
-      <svg viewBox="0 0 150 150">
+    <div class="radial-progress" data-percent="80">
+      <div class="sweep-light">      <svg viewBox="0 0 150 150">
         <circle class="bg" cx="75" cy="75" r="65"></circle>
         <circle class="progress" cx="75" cy="75" r="65"></circle>
-      </svg>
+      </svg></div>
+
       <div class="content">
-        <div class="value">75%</div>
+        <div class="value">80%</div>
         <div class="label">CSS</div>
       </div>
     </div>
 
     <div class="radial-progress" data-percent="70">
-      <svg viewBox="0 0 150 150">
+      <div class="sweep-light">      <svg viewBox="0 0 150 150">
         <circle class="bg" cx="75" cy="75" r="65"></circle>
         <circle class="progress" cx="75" cy="75" r="65"></circle>
       </svg>
+    </div>
+
       <div class="content">
         <div class="value">70%</div>
         <div class="label">Javascript</div>
       </div>
     </div>
+
+
 
   </div>
 </div>
@@ -211,32 +249,32 @@
               <h5 class="Backend-skills-title">Backend Skills</h5>
 
               <div class="progress">
-                <span class="skill"><span>C#</span> <i class="val">65%</i></span>
+                <span class="skill"><span>C#</span> <i class="val">70%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div><!-- End Skills Item -->
 
                 <div class="progress">
-                <span class="skill"><span>Python</span> <i class="val">60%</i></span>
+                <span class="skill"><span>Python</span> <i class="val">65%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div><!-- End Skills Item -->
 
               <h5 class="Frameworks-skills-title">Framework Skills</h5>
 
               <div class="progress">
-                <span class="skill"><span>Blazor</span> <i class="val">60%</i></span>
+                <span class="skill"><span>Blazor</span> <i class="val">65%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div><!-- End Skills Item -->
 
                  <div class="progress">
-                <span class="skill"><span>MVC (ASP.NET)</span> <i class="val">65%</i></span>
+                <span class="skill"><span>MVC (ASP.NET)</span> <i class="val">75%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div><!-- End Skills Item -->
 
@@ -270,16 +308,16 @@
 <h5 class="MS-skills-title">PowerPlatform</h5>
 
 <div class="progress">
-  <span class="skill"><span>Sharepoint</span> <i class="val">80%</i></span>
+  <span class="skill"><span>Sharepoint</span> <i class="val">85%</i></span>
   <div class="progress-bar-wrap">
-    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+    <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
   </div>
 </div><!-- End Skills Item -->
 
 <div class="progress">
-  <span class="skill"><span>PowerAutomate</span> <i class="val">75%</i></span>
+  <span class="skill"><span>PowerAutomate</span> <i class="val">80</i></span>
   <div class="progress-bar-wrap">
-    <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
   </div>
 </div><!-- End Skills Item -->
 
@@ -291,25 +329,25 @@
 </div><!-- End Skills Item -->
 
 <div class="progress">
-  <span class="skill"><span>PowerApps</span> <i class="val">80%</i></span>
+  <span class="skill"><span>PowerApps</span> <i class="val">85%</i></span>
   <div class="progress-bar-wrap">
-    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+    <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
   </div>
 </div><!-- End Skills Item -->
 
 <h5 class="UXUi-skills-title">Prototyping</h5>
 
               <div class="progress">
-                <span class="skill"><span>Adobe XD</span> <i class="val">80%</i></span>
+                <span class="skill"><span>Adobe XD</span> <i class="val">85%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div><!-- End Skills Item -->
 
                             <div class="progress">
-                <span class="skill"><span>Figma</span> <i class="val">75%</i></span>
+                <span class="skill"><span>Figma</span> <i class="val">80%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div><!-- End Skills Item -->
 
@@ -318,14 +356,14 @@
               <div class="progress">
                 <span class="skill"><span>Adobe Suite</span> <i class="val">90%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" ></div>
                 </div>
               </div><!-- End Skills Item -->
 
                   <div class="progress">
-                <span class="skill"><span>Miro</span> <i class="val">80%</i></span>
+                <span class="skill"><span>Miro</span> <i class="val">85%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div><!-- End Skills Item -->
 
@@ -379,7 +417,29 @@
               <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
             </div><!-- Edn Resume Item -->
 
+                        <h3 class="resume-title">Short Courses</h3>
+            <div class="resume-item">
+              <h4>Master of Fine Arts &amp; Graphic Design</h4>
+              <h5>2015 - 2016</h5>
+              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+            </div><!-- Edn Resume Item -->
+
           </div>
+
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+            <h3 class="resume-title">Skills Building</h3>
+            <div class="resume-item">
+              <h4>Senior graphic design specialist</h4>
+              <h5>2019 - Present</h5>
+              <p><em>Experion, New York, NY </em></p>
+              <ul>
+                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
+                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
+                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
+                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
